feat: :sparkles: add vase entity
