# src/domain/Vase/dto/vase-response.dto.ts
@@ -1,0 +1,10 @@
+export class VaseResponseDto {
+	id: string;
+	name: string;
+	description?: string;
+	color: string;
+	height: number;
+	userId: string;
+	createdAt: Date;
+	updatedAt: Date;
+}
